prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/import_error.diag.txt
ERROR: expected 'identifier or *'
testData/diagnostics/import_error.nut:2:20

// missing import list
from "file1" import
                    ^


